<resources>
    <string name="app_name">Guulpay</string>
    <string name="countryCodesPath">countryCodeListJSON/countryCodeList.json</string>
    <string name="currenciesPath">countryCodeListJSON/currencies.json</string>
    <string name="quicksandMedium">font/Quicksand-Medium.ttf</string>
    <string name="quicksandRegular">font/Quicksand-Regular.ttf</string>
    <string name="quicksandLight">font/Quicksand-Light.ttf</string>
    <string name="dot">•</string>
    <string name="dollar">$</string>
    <string name="networkUnavailable">Please check your internet connection.</string>
    <string name="someErrorOccurred">Something went wrong</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirm_phoneNumber">Confirm Phone Number</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="next">Next</string>
    <string name="passcode">Passcode</string>
    <string name="forgotPwd">Forgot Passcode?</string>
    <string name="orLoginWith">or Login with</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="onlineService">Q-Express Online Service</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="confirmPasscode">Confirm Passcode</string>
    <string name="termsCondition"> Terms &amp; Conditions </string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="signUp">Sign Up</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="passcodeMismatched">Passcode Mismatched</string>
    <string name="emptyNameField">Please enter name</string>
    <string name="emptyMobileField">Please enter mobile number</string>
    <string name="emptyEmailIdField">Please enter email</string>
    <string name="emptyPasscode">Please enter passcode</string>
    <string name="emptyConfirmPasscode">Please confirm your passcode</string>
    <string name="passcodeMismatch">Passcodes doesn\'t match</string>
    <string name="invalidPasscode">Please enter 4 digit passcode</string>
    <string name="invalidEmail">Please enter valid email</string>
    <string name="invalidMobile">Please enter valid mobile number</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="useOFGuulpayPlatformService">Use of the Guulpay Platform/\nGuulpay Services</string>
    <string name="acceptance">Acceptance</string>
    <string name="forgotPwdHeader">Forgot Passcode</string>
    <string name="forgotYourPwd">Forgot Your Passcode?</string>
    <string name="forgotPwdDetailText">Please enter your mobile number\nwhere you will get an OTP</string>
    <string name="verifyPhoneNumber">Verify Phone Number</string>
    <string name="otpSentMsg">An OTP has been sent to %1$s</string>
    <string name="enterTheOtp">Please enter the OTP</string>
    <string name="verifyOtp">Verify OTP</string>
    <string name="verify">Verify</string>
    <string name="resendOtp">Resend</string>
    <string name="didntReceiveOtp">Didn\'t Receive an OTP?</string>
    <string name="submit">Submit</string>
    <string name="resetPasscode">Reset Passcode</string>
    <string name="enterNewPasscode">Please enter the new passcode</string>
    <string name="newPasscode">New Passcode</string>
    <string name="changePasscodeConfirmingCurrentPasscode">Change your passcode confirming current passcode</string>
    <string name="currentPasscode">Current Passcode</string>
    <string name="repeatLastTransaction">Repeat your last transaction</string>
    <string name="amount">Amount</string>
    <string name="completeYourPayment">Complete Your Payment</string>
    <string name="payNow">Pay Now</string>
    <string name="savedCards">Saved Cards</string>
    <string name="addNewBank">Add New Bank</string>
    <string name="otherPaymentModes">Other Payment Modes</string>
    <string name="debitCard">Debit Card</string>
    <string name="creditCard">Credit Card</string>
    <string name="cardNumber">Card No.</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="saveThisCard">Save this card for faster checkout</string>
    <string name="delete">Delete</string>
    <string name="enterYourEmailId">Enter Your Email ID</string>
    <string name="msgComplaint">Message/Complaint</string>
    <string name="title_guulex_activity_final">Guulex</string>
    <string name="title_activity_guulexfinal">GuulexfinalActivity</string>
    <string name="bt100Select">• $100</string>
    <string name="bt500Select">• $500</string>
    <string name="bt1000Select">• $1000</string>
    <string name="bt100Deselect">$100</string>
    <string name="bt500Deselect">$500</string>
    <string name="bt1000Deselect">$1000</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="verified">Verified</string>
    <string name="notVerified">Not verified</string>
    <string name="fullName">Full Name</string>
    <string name="save">Save</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="others">Others</string>
    <string name="personalQrCode">Your personal Guulpay QR Code</string>
    <string name="general">General</string>
    <string name="securitySettings">Security Settings</string>
    <string name="bankAccounts">Bank Accounts</string>
    <string name="receivers">Receivers</string>
    <string name="raiseComplaint">Raise Complaint</string>
    <string name="changePasscode">Change Passcode</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="logout">Logout</string>
    <string name="areYouSure">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addReceiver">Add Receiver</string>
    <string name="domestic">Domestic</string>
    <string name="international">International</string>
    <string name="bankName">Bank Name</string>
    <string name="selectBank">Select Bank</string>
    <string name="accountDetails">Account Details</string>
    <string name="accountNumber">Account Number</string>
    <string name="tvAccountHolderName">Account Holder Name</string>
    <string name="ifscCode">IFSC Code</string>
    <string name="ibanNumber">IBAN Number</string>
    <string name="selectCountry">Select Country</string>
    <string name="selectedCountry">Finland</string>
    <string name="enterPasscode">Enter Passcode</string>
    <string name="or">OR</string>
    <string name="provideYourFingerprint">Provide your Fingerprint</string>
    <string name="send">Send</string>
    <string name="autoLoad">Auto Load</string>
    <string name="add">Add</string>
    <string name="myRecentTransactions">My Recent Transactions</string>
    <string name="autoLoad2">Auto Load</string>
    <string name="autoLoadAmount">Auto Load Amount</string>
    <string name="lowerLimitOfWalletBalance">Lower Limit Of Wallet Balance</string>
    <string name="bankAccount">Bank Account</string>
    <string name="selectBankAccount">Select Bank Account</string>
    <string name="addBankAccount">Add Bank Account</string>
    <string name="addedBankList">Added Bank List</string>
    <string name="savedBanks">Saved Banks</string>
    <string name="personalGuulpayQrCode">Personal Guulpay QR Code</string>
    <string name="scanCodeToPay">Scan QR code to pay</string>
    <string name="scanNFCToPay">Scan QR code to pay</string>
    <string name="saveQr">Save QR</string>
    <string name="helpSupport">Help and Support</string>
    <string name="howCanWeHelpU">How can we help you with?</string>
    <string name="chooseCategory">Choose a category to begin</string>
    <string name="contact24X7Help">Contact 24x7 Help</string>
    <string name="ourExecutiveWillHelpU">Our executive will help to solve your problem</string>
    <string name="guulpayWallet">Guulpay Wallet</string>
    <string name="linkToBankTrans">Link To Bank &amp; Transaction</string>
    <string name="othersSupport">Others Support</string>
    <string name="selectAnOrder">Select a Transaction to Complain</string>
    <string name="writeToUs">Write to us</string>
    <string name="select">Select</string>
    <string name="backToHome">Back to Home</string>
    <string name="payments">Payments</string>
    <string name="viaPhoneQr">Via Phone Number/QR Code</string>
    <string name="viaInternationalMoneyTransfer">Via International Money Transfer</string>
    <string name="information">Information</string>
    <string name="sendMoneyViaPhoneQr">Send money from Guulpay wallet via Phone number/QR Code</string>
    <string name="sendMoneyViaIntMoneyTransfer">Send money from Guulpay wallet via International Money Transfer</string>
    <string name="ok">OK</string>
    <string name="phQr">Phone Number/QR Code</string>
    <string name="enterMobileNumber">Enter Mobile Number</string>
    <string name="scanQrToPay">Scan QR code to pay</string>
    <string name="viaPhone">Via Phone Number</string>
    <string name="phoneNo">Phone Number</string>
    <string name="phoneNo_recharge">Mobile Number</string>
    <string name="requestAmount">Request Amount</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="recentlyRequested">Recently Requested</string>
    <string name="requestTo">Request to</string>
    <string name="addMessage">Add Message</string>
    <string name="request">Request</string>
    <string name="change">Change</string>
    <string name="nfc">NFC</string>
    <string name="scanQrBarCode">Scan QR Code</string>
    <string name="countries">Countries</string>
    <string name="done">Done</string>
    <string name="searchCountry">Search Country</string>
    <string name="searchBanks">Search Bank</string>
    <string name="availableBalance">Guulpay Wallet Balance:</string>
    <string name="rechargeBillPayment">Mobile Recharge &amp; Others</string>
    <string name="viewAll">View All</string>
    <string name="recentTransactions">Recent Transactions</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="transactions">Transactions</string>
    <string name="mytransactions">My Transactions</string>
    <string name="more">More</string>
    <string name="account">Account</string>
    <string name="pay">Pay</string>
    <string name="addBank">Add Bank</string>
    <string name="addMoney">Add Money</string>
    <string name="recharge">Recharge</string>
    <string name="forex">Guulex</string>
    <string name="gullex">Guulex</string>
    <string name="cards">Cards</string>
    <string name="gas">Gas</string>
    <string name="internet">Internet</string>
    <string name="dth">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="landline">Landline</string>
    <string name="repeat">Repeat</string>
    <string name="notification">Notification</string>
    <string name="bankTransfer">Bank Transfer</string>
    <string name="electricBill">Electric Bill</string>
    <string name="banks">Banks</string>
    <string name="nfc_notavailable">NFC is not available</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="proceed_to_recharge">Proceed to Recharge</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_operator">Select Operator</string>
    <string name="operator">Operator</string>
    <string name="recent_recharges">Recent Recharges</string>
    <string name="search_operatos">Search Operators</string>
</resources>