<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_below="@+id/cardVwAmt"
    android:id="@+id/llAmt"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_15sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.guulpay.customUiComponents.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt100Select"
        android:textSize="@dimen/smallTextSize"
        android:background="@drawable/ic_add_money_select_button"
        android:textColor="@android:color/white"
        android:id="@+id/btAmt100"
        />
    <com.guulpay.customUiComponents.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/smallTextSize"
        android:background="@drawable/ic_add_money_select_button"
        android:textColor="@android:color/white"
        android:text="@string/bt500Deselect"
        android:id="@+id/btAmt500"
        />
    <com.guulpay.customUiComponents.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/smallTextSize"
        android:background="@drawable/ic_add_money_select_button"
        android:textColor="@android:color/white"
        android:text="@string/bt1000Deselect"
        android:id="@+id/btAmt1000"
        />
</LinearLayout>