<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:padding="@dimen/_3sdp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="left">

        <com.guulpay.customUiComponents.QuicksandMediumTextview
            android:id="@+id/tvHomeBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_home_select"
            android:gravity="center"
            android:layout_weight=".5"
            android:text="@string/home"
            android:textColor="@android:color/black"
            android:textSize="@dimen/smallTextSize" />

        <com.guulpay.customUiComponents.QuicksandMediumTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_marginRight="@dimen/_20sdp"
            android:drawableTop="@drawable/ic_my_wallet_deselect"
            android:gravity="center"
            android:text="@string/wallet"
            android:id="@+id/tvWalletBottomLayout"
            android:textColor="@android:color/black"
            android:textSize="@dimen/smallTextSize" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="right">

        <com.guulpay.customUiComponents.QuicksandMediumTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:drawableTop="@drawable/ic_transaction_deselect"
            android:gravity="center"
            android:text="@string/transactions"
            android:id="@+id/tvTransBottomLayout"
            android:textColor="@android:color/black"
            android:textSize="@dimen/smallTextSize" />

        <com.guulpay.customUiComponents.QuicksandMediumTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_more_icon_deselect"
            android:gravity="center"
            android:text="@string/more"
            android:id="@+id/tvMoreBottomLayout"
            android:textColor="@android:color/black"
            android:textSize="@dimen/smallTextSize" />
    </LinearLayout>
</LinearLayout>