<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            >

            <com.guulpay.customUiComponents.QuicksandMediumTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterPasscode"
                android:id="@+id/tvEnterPasscodeText"
                android:textSize="@dimen/mediumTextSize"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/_10sdp"
                />
            <include layout="@layout/enter_passcode_layout" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.guulpay.customUiComponents.QuicksandMediumTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="@dimen/mediumTextSize"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <com.guulpay.customUiComponents.QuicksandMediumTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provideYourFingerprint"
        android:gravity="center_horizontal"
        android:textSize="@dimen/mediumTextSize"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_finger_print"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        />

</LinearLayout>