<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.guulpay.customUiComponents.QuicksandMediumTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:text="Houston Samanta"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/normalTextSize" />

                <com.guulpay.customUiComponents.QuicksandRegularTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="@string/personalGuulpayQrCode"
                    android:textSize="@dimen/smallTextSize" />

                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ic_qr_sample" />

                <com.guulpay.customUiComponents.QuicksandRegularTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/scanCodeToPay"
                    android:textSize="@dimen/mediumTextSize" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.guulpay.customUiComponents.CustomButton
            android:layout_width="@dimen/buttonSaveQrSize"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/drawable_colorprimary_roundedcorner"
            android:text="@string/saveQr"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>